--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,21 +4,38 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "serverless deploy",
+    "test": "node node_modules/jest/bin/jest.js --logHeapUsage --silent --ci",
+    "test:update": "node node_modules/jest/bin/jest.js -u",
+    "generate-swagger": "serverless openapi generate --stage ${ENV:-dev} --output ./swagger.yaml",
+    "format": "npx prettier --write \"src/**/*.{ts,tsx,js}\" "
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.101",
+    "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
-    "aws-sdk": "^2.1171.0",
+    "aws-sdk": "^2.1173.0",
+    "http-errors": "^2.0.0",
+    "jest": "^28.1.2",
+    "jest-dynalite": "^3.6.0",
+    "prettier": "^2.7.1",
     "serverless": "^3.20.0",
     "serverless-bundle": "^5.3.0",
+    "serverless-openapi-documentation": "^0.4.0",
     "serverless-webpack": "^5.7.1",
+    "swagger-ui": "^4.12.0",
+    "ts-jest": "^28.0.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@middy/core": "^2.5.7",
+    "@middy/http-error-handler": "^2.5.7",
+    "@middy/http-event-normalizer": "^2.5.7",
+    "@middy/http-header-normalizer": "^2.5.7",
+    "@middy/http-json-body-parser": "^2.5.7",
     "http-status-codes": "^2.2.0"
   }
 }
