--- a/product-service/tsconfig.json
+++ b/product-service/tsconfig.json
@@ -1,28 +1,29 @@
 {
-    "compilerOptions": {
-      "noImplicitAny": false,
-      "target": "es5",
-      "lib": [
+  "compilerOptions":{
+     "noImplicitAny":false,
+     "target":"es5",
+     "lib":[
         "dom",
         "dom.iterable",
         "esnext"
-      ],
-      "allowJs": true,
-      "skipLibCheck": true,
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "strict": true,
-      "forceConsistentCasingInFileNames": true,
-      "module": "esnext",
-      "moduleResolution": "node",
-      "resolveJsonModule": true,
-      "isolatedModules": true,
-      "noEmit": false,
-      "jsx": "react",
-      "baseUrl": "product-service/src"
-    },
-    "exclude": [
-      "node_modules"
-    ]
-  }
-  
+     ],
+     "allowJs":true,
+     "skipLibCheck":true,
+     "esModuleInterop":true,
+     "allowSyntheticDefaultImports":true,
+     "strict":true,
+     "forceConsistentCasingInFileNames":true,
+     "module":"esnext",
+     "moduleResolution":"node",
+     "resolveJsonModule":true,
+     "isolatedModules":true,
+     "noEmit":false,
+     "jsx":"react",
+     "baseUrl":"product-service/src",
+     "outDir": "build"
+  },
+  "include": ["src/**/*"],
+  "exclude":[
+     "node_modules", "build/**/*"
+  ]
+}
