[Task-4]: Integration with Database

--- a/product-service/serverless/roles.yml
+++ b/product-service/serverless/roles.yml
@@ -2,7 +2,7 @@ Resources:
     LambdaDataRead:
       Type: AWS::IAM::Role
       Properties:
-        RoleName: LambdaDataReadRole
+        RoleName: LambdaDataReadRole-${self:provider.region}
         AssumeRolePolicyDocument:
           Version: '2012-10-17'
           Statement:
