--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "deploy": "serverless deploy",
+    "deploy": "serverless deploy --region eu-west-1",
     "test": "node node_modules/jest/bin/jest.js --logHeapUsage --silent --ci",
     "test:update": "node node_modules/jest/bin/jest.js -u",
     "generate-swagger": "serverless openapi generate --stage ${ENV:-dev} --output ./swagger.yaml",
@@ -14,12 +14,19 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.101",
+    "@types/hapi__joi": "^17.1.8",
     "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.3",
+    "@types/node": "^18.0.6",
+    "@types/pg": "^8.6.5",
+    "@types/pg-types": "^2.2.0",
+    "@types/uuid": "^8.3.4",
     "aws-sdk": "^2.1173.0",
     "http-errors": "^2.0.0",
     "jest": "^28.1.2",
     "jest-dynalite": "^3.6.0",
+    "node-postgres": "^0.6.2",
+    "pg": "^8.7.3",
+    "pg-native": "^3.0.0",
     "prettier": "^2.7.1",
     "serverless": "^3.20.0",
     "serverless-bundle": "^5.3.0",
@@ -31,11 +38,13 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@middy/core": "^2.5.7",
     "@middy/http-error-handler": "^2.5.7",
     "@middy/http-event-normalizer": "^2.5.7",
     "@middy/http-header-normalizer": "^2.5.7",
     "@middy/http-json-body-parser": "^2.5.7",
-    "http-status-codes": "^2.2.0"
+    "http-status-codes": "^2.2.0",
+    "uuid": "^8.3.2"
   }
 }
