--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -8,33 +8,42 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
+  region: 'eu-west-1'
+  environment:
+      PG_HOST: ${self:custom.params.pgHost}
+      PG_PORT: ${self:custom.params.pgPort}
+      PG_DBNAME: ${self:custom.params.pgDatabase}
+      PG_USERNAME: ${self:custom.params.pgUser}
+      PG_PASSWORD: ${self:custom.params.pgPassword}
 
 custom:
+  params:
+    pgDatabase: ${ssm:postgresdb-products-database}
+    pgHost: ${ssm:postgresdb-products-host}
+    pgPassword: ${ssm:postgresdb-products-password}
+    pgPort: ${ssm:postgresdb-products-port}
+    pgUser: ${ssm:postgresdb-products-user}
   bundle:
     linting: true
   webpack:
     webpackConfig: 'webpack.config.js'
   documentation: ${file(./serverless/documentation/documentation.yml):documentation}
 
-functions:
-  getProductsList:
-    handler: src/functions/getProductsList/getProductsList.handler
-    role: LambdaDataRead
-    events:
-      - http:
-          path: products
-          method: get
-          documentation: ${file(serverless/documentation/documentation.yml):endpoints.products.getProductsList}
-
-  getProductsById:
-    handler: src/functions/getProductsById/getProductsById.handler
-    role: LambdaDataRead
-    events:
-      - http:
-          path: products/{productId}
-          method: get
-          documentation: ${file(serverless/documentation/documentation.yml):endpoints.products.getProductsById}
+functions: ${file(./serverless/functions.yml)}
 
 resources: ${file(./serverless/resources.yml)}
+
+package:
+  individually: true
+  excludeDevDependencies: true
+  patterns:
+    - '!.git'
+    - '!.git/**'
+    - '!.github/**'
+    - '!.gitignore'
+    - '!coverage'
+    - '!README.md'
+    - '!serverless.yml'
+    - '!serverless/**'
 
       
